Woops! corrected a mistake with the toggle function on the mobile navigation bar.

--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,11 @@ body {
 
 /*-----------------------------------Media Queries---------------------------------------*/
 @media screen and (min-width: 320px) and (max-width: 812px) {
-	
+
+	.toggleDisplay {
+		display: block!important;
+	}
+
 	.mainNav {
 		padding: 0;
 		position: initial;
