--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ body {
 	margin: 0;
 	padding: 0;
 }
+
+.row {
+	display: flex;
+	margin: 25px 0px;
+}
 /*-----------------------------------Navigation Styles------------------------------------*/
 .mainNav {
 	text-align: center;
@@ -30,12 +35,13 @@ body {
 	font-weight: 700;
 	padding: 15px 25px;
 	border: 1px solid #595959;
-	-webkit-transition: color .5s;
+	-webkit-transition: all .5s;
 }
 
 .mainNav li a:hover {
 	transition-timing-function: ease-in-out;
 	color: #FFFFFF;
+	border: 1px solid #fff;
 }
 /*------------------------------Hamburger styles----------------------------------------------*/
 .hamburger {
@@ -65,7 +71,7 @@ body {
 
 /*---------------------------------titleImgcontainer styles------------------------------------*/
 .titleImgContainer {
-	background-image: url(images/forest.jpg);
+	background-image: url(images/forest-leaf.jpg);
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: center center;
@@ -92,9 +98,11 @@ body {
 
 .about-us-section {
 	display: flex;
+	flex-wrap: wrap;
 	padding-top: 70px;
 	text-align: left;
-	font-family: "Open Sans",Helvetica,Arial,sans-serif;
+	/*font-family: "Open Sans",Helvetica,Arial, sans-serif;*/
+	font-family: "Open Sans", Helvetica, Arial, sans-serif!important;
 	margin-left: 70px;
 	margin-right: 70px;
 }
@@ -114,6 +122,14 @@ body {
 	padding: 2px 16px;
 	line-height: 1.6em;
 	color: #333333;
+	font-size: 15px;
+}
+
+.biggerCardText {
+	padding: 27px;
+	text-align: left;
+	line-height: 1.6em;
+	color: #333333;
 }
 
 .card1Title {
@@ -124,6 +140,19 @@ body {
 }
 .card3Title {
 	color: #852406;
+}
+
+.card1Title, .card2Title, .card3Title {
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.biggerCardTitle {
+	color: #666666;
+	text-shadow: none;
+	font-size: 20px;
+	font-weight: 700;
+	text-align: center;
 }
 
 .green-btn, .blue-btn, .red-btn {
@@ -140,6 +169,7 @@ body {
 }
 .green-btn:hover {
 	background-color: #429F4E;
+
 }
 .blue-btn {
 	background-color: #1686C1;
@@ -158,15 +188,33 @@ body {
 	background-color: #9C4C34;
 }
 
+.biggerCardBtn {
+	color: #666;
+	padding: 10px 30px;
+	background: #fff;
+	border-radius: 10px;
+	border: 1px solid #ccc;
+	text-decoration: none;
+}
+
 .btn-div {
 	text-align: center;
 	padding-bottom: 30px;
 	margin-top: 40px;
 }
 
+.biggerCardBtnDiv {
+	text-align: right;
+}
+
 
 /*-----------------------------------Media Queries---------------------------------------*/
 @media screen and (min-width: 320px) and (max-width: 812px) {
+
+	.row {
+		display: initial;
+		margin: 40px 0px;
+	}
 
 	.toggleDisplay {
 		display: block!important;
@@ -206,5 +254,9 @@ body {
 
 	.about-us-section {
 		display: initial;
+	}
+
+	.card {
+		margin: 30px 20px;
 	}
 }
