--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,35 @@ body {
 	padding-top: 40px;
 }
 
+/*----------------------------------Contact form section ---------------------------------*/
+.contact-form {
+	text-align: center;
+	background-image: url(images/contactleaf.jpg);
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	padding-top: 70px;
+	padding-bottom: 60px;
+}
+
+
+.contact-content {
+	display: flex;
+}
+
+.contact-p {
+	background: rgba(242, 242, 242, 0.4) none repeat scroll 0 0;
+	border-radius: 5px;
+	color: #000;
+	font-size: 16px;
+	/*margin-bottom: 20px;*/
+	padding: 20px 15px;
+	flex-basis: auto;
+	margin: 20px auto;
+}
+
 /*-----------------------------------Media Queries---------------------------------------*/
 @media screen and (min-width: 320px) and (max-width: 812px) {
 
